feat(news): enhance news module with config-driven resolver
- extract and refine resolver logic for multi-category classification
- move category/rule keywords to JSON config for maintainability
- add resolver config model and improve mapping/validation flow
- update news models and DTO mapping behavior, handle cache TTL
- introduce category and latest cache flow improvements for dashboard
- add category-based news visuals and detail page groundwork

WIP: integration still in progress